# exprtk

./: CMakeLists.txt  readme.txt
benchmark/: exprtk.cpp
examples/: CMakeLists.txt  example_01.cpp
include/: exprtk_posit_adaptor.hpp  exprtk_posit_forward.hpp
test/: CMakeLists.txt
